[flake8]
ignore = E203,E266,E501,W503,B305,B950
max-line-length = 120
max-complexity = 10
select = E,F,W,B,B950

[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = 3keel
url = https://github.com/corinat/3keel_coastal_flood
description = Getting 1km grid cells along UK coast line
long_description = file: README.md
long_description_content_type = text/markdown
author = ""
author_email = ""
zip_safe = False

[options]
use_scm_version = True
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    fiona~=1.8.20
    geopandas~=0.10.2
    gpxpy~=1.5.0
    pygeos~=0.11.1
    rasterio~=1.2.10
    shapely~=1.8.0
    typer[all]~=0.4.0
tests_require =
    pytest
    pytest-cov

[options.entry_points]